2007-07-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Don't use exceptions for patch music flexes.
	* audio/midi_drivers/LowLevelMidiDriver.cpp: Destroy cond also when the
	  driver is destroyed.
	* usecode/compiler/ucfun.cc: Only add terminating return opcode to functions
	  that don't already have one.

2007-07-12  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/midi_drivers/* : Changes to the MidiDriver code as per Exult 
	  bug report 1750743, with additional changes to ensure that it actually
	  works properly in all cases. Also fixed possible problems with sequence
	  speed being set to 0, notes being cut off early at the end of a song and 
	  renamed some variables so they properly relfect what they actually are.
	* msvcstuff/wud.vcproj : Changes so this project compiles

2007-07-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemap.cc, files/databuf.h: Removed OVectorDataSource in favor of
	  StreamDataSource + stringstream. Added 'write' virtual method to
	  DataSource which writes a string to the source.
	* mapedit/*: Removed unused definitions.
	* gamedat.cc, gamewin.h: Fixed flex multimap savegames to save an inner
	  flex (containing the IREG files) for each map after the first.

2007-07-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug which would cause a purple outline to be displayed around NPCs
	  during some animations in recent snapshots of Exult.

2007-07-07	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Set audio system to just USE_FMOPL_MIDI
			The theory is, this may reduce crashes, as Timidity doesn't
				appear to work, and MT32 could be having problems.

2007-07-02	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Fixed bug with "Normal" option w/ D-PAD
			Normal option couldn't be selected
			
2007-07-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/*: Making usecode of the SI Fixes and LB joining mods compile.